# ipk

./: .gitignore  Cargo.toml  Justfile  Makefile
.github/workflows/: ci.yml
docs/book/: book.toml
final/: Idla.pkg.toml
lib/id-data/: Cargo.toml
lib/id-lib/: Cargo.toml
new/: Idla.pkg.toml
new/src/: main.idla
new2/: Idla.pkg.toml
new2/src/: main.idla
new3/: Idla.pkg.toml
new3/src/: main.idla
pkg/id-cli/: Cargo.toml
pkg/id-cli/src/: config.rs  error.rs  main.rs
pkg/id-cli/src/cmd/: build.rs  config.rs  help.rs  init.rs  mod.rs  repl.rs  run.rs
pkg/id-cli/src/pkg/: mod.rs
pkg/id-cli/src/repo/: mod.rs
res/config/: Idla.toml
