[package]
name = "id-cli"
authors = ["Chris P <clp@clp.is>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
dirs-next = "2.0.0"
id-lib = { path = "../../lib/id-lib/" }
serde = { version = "1.0.136", features = ["derive"] }
toml = { version = "0.5.8", features = [] }
